test/spec_vectors/exports/ok/module_5.wat
(module (func (export "a") (export "b") (param i32)))