test/spec_vectors/exports/fail/module_17.wat
(module (import "spectest" "print_i32" (func (param i32))) (export "a" (func 1)))